# openvmm

.config/: nextest.toml
.github/workflows/: copilot-setup-steps.yml
Guide/src/: index.md
Guide/src/dev_guide/: snapshot_format.md
Guide/src/user_guide/: openvmm.md
flowey/flowey_lib_hvlite/src/: build_nextest_vmm_tests.rs  download_openvmm_vmm_tests_artifacts.rs  install_openvmm_rust_build_essential.rs  test_nextest_vmm_tests_archive.rs
openhcl/bootloader_fdt_parser/src/: lib.rs
openhcl/openhcl_boot/src/: cmdline.rs  memory.rs  single_threaded.rs
openhcl/underhill_core/src/: vpci.rs
openhcl/underhill_mem/src/: mapping.rs
openvmm/openvmm_defs/src/: config.rs
openvmm/openvmm_entry/src/: serial_io.rs
petri/burette/src/: main.rs
petri/petri_artifacts_core/: Cargo.toml
petri/petri_artifacts_core/src/: lib.rs
support/inspect/src/: lib.rs
support/task_control/src/: lib.rs
support/tracing_helpers/: Cargo.toml
vm/acpi_spec/src/: madt.rs
vm/devices/user_driver/: Cargo.toml
vm/devices/user_driver/vfio_sys/: Cargo.toml
vm/devices/user_driver/vfio_sys/src/: lib.rs
vm/devices/watchdog/guest_watchdog/: Cargo.toml
vm/devices/watchdog/guest_watchdog/src/: lib.rs  resolver.rs
vm/loader/src/: bzimage.rs  cpuid.rs  linux.rs  paravisor.rs
vm/vmcore/src/: interrupt.rs  irqfd.rs
vmm_core/src/: platform_resolvers.rs
vmm_core/src/emuplat/: ioapic.rs
vmm_core/state_unit/src/: lib.rs
vmm_core/virt_kvm/src/: gsi.rs
vmm_core/virt_mshv/: Cargo.toml
vmm_core/virt_mshv/src/: irqfd.rs  lib.rs
vmm_core/virt_support_aarch64emu/: Cargo.toml
vmm_core/virt_support_x86emu/: Cargo.toml
(+81 files in other folders)
