# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "petri_artifacts_core"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
paste.workspace = true
serde = { workspace = true, features = ["std", "derive"] }

[lints]
workspace = true
