# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "vfio_sys"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(unix)'.dependencies]
memory_range.workspace = true
pal_async.workspace = true

anyhow.workspace = true
headervec.workspace = true
bitfield-struct.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["ioctl"] }
tracelimit.workspace = true
tracing.workspace = true
vfio-bindings.workspace = true

[lints]
workspace = true
