# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "guest_watchdog"
edition.workspace = true
rust-version.workspace = true

[dependencies]
vmcore.workspace = true
vm_resource.workspace = true

chipset_device.workspace = true
chipset_device_resources.workspace = true
chipset_resources.workspace = true
watchdog_core.workspace = true

inspect.workspace = true
mesh.workspace = true
open_enum.workspace = true
tracelimit.workspace = true

async-trait.workspace = true
thiserror.workspace = true

[lints]
workspace = true
